# PlavchanPeriodogram

./: README.md  pyproject.toml
src/PlavchanPeriodogram/: setup.py
src/PlavchanPeriodogram.egg-info/: PKG-INFO  SOURCES.txt
